# diptest

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: asan.yml  linux.yml  macos.yml  test_matrix.yml  valgrind.yml  wheels.yml  windows.yml
cmake/: BuildType.cmake  OptimizeForArchitecture.cmake  SimpleOptimizeForArchitecture.cmake
diptest/: __init__.py  _dip.c  _dip.h  _diptest.c  _diptest.pyx  consts.py  diptest.c  diptest.py  diptest.pyx
diptest/include/: diptest.h
diptest/lib/: __init__.py
include/diptest/: dip.hpp  diptest.h  diptest.hpp  pcg64.hpp  test_pcg.hpp  wrapper.hpp
src/: bindings.cpp  dip.cpp  diptest.c  diptest.cpp  test_pcg.cpp  wrapper.cpp
tests/: test_diptest.py  test_internal.py  test_sample.npy
