[metadata]
name = diptest
description = Hartigan's diptest.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ralph Urlus
author_email = rurlus.dev@gmail.com
license = GPLv2+
platforms = any
url = https://github.com/RUrlus/diptest
project_urls =
    Source  = https://github.com/RUrlus/diptest
    Tracker = https://github.com/RUrlus/diptest/issues
keywords = diptest hartigan statistics modality
classifiers =

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy>=1.18

[options.extras_require]
test =
    pytest
all =
    %(test)s

[tool:pytest]
addopts = -rsxX -v
testpaths = tests
